<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginName">login name</string>
    <string name="btn1">Button1</string>
    <string name="btn2">Button2</string>
    <string name="enable_sth">Enable Something</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">quit</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weatherForcast">Weather Forecast</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>
