<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sulin.lab1.StartActivity">

    <TextView
        android:text="@string/hello_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:id="@+id/button"
        android:layout_above="@+id/btnStartChat"
        android:layout_marginBottom="69dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startChat"
        android:id="@+id/btnStartChat"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherForcast"
        android:id="@+id/btnWeatherForcast"
        android:layout_below="@+id/btnStartChat"
        android:layout_alignStart="@+id/btnStartChat"
        android:layout_marginTop="57dp" />

    <Button
        android:text="Test Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnWeatherForcast"
        android:layout_alignStart="@+id/btnWeatherForcast"
        android:layout_marginTop="34dp"
        android:id="@+id/btn_testToolbar" />
</RelativeLayout>
